fix job timeline space issue on mobile device

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3223,3 +3223,11 @@ input, select, textarea {
 			}
 
 	}
+
+	.left-text {
+		text-align: left;
+	}
+
+	.right-text {
+		float: right;
+	}
